syntax = "proto3";

//view_stat:  通用观看记录统计

package cfwf.micro_service.view_stat;
option java_package = "com.cfwf.micro_service.view_stat";

service ViewStat { 
  //获取资源观看总数
  rpc SearchViewCount (SearchViewCountRequest) returns (SearchViewCountResponse) {}
  
  //增加某资源的观看记录
  rpc InsertViewLog (InsertViewLogRequest) returns (InsertViewLogResponse) {}
  
  //获取某用户观看某资源次数
  rpc GetUserViewCount (GetUserViewCountRequest) returns (GetUserViewCountResponse) {}
} 

//通用rpc调用返回结果
enum RPC_CALL_RESULT {
   RPC_CALL_RESULT_NONE        = 0;   //不应出现
   RPC_CALL_RESULT_SUCCESS     = 1;   //成功
   RPC_CALL_RESULT_DB_ERROR    = 2;   //数据库出错
   RPC_CALL_RESULT_INPUT_ERROR = 3;   //传入数据有错，格式错误或者找不到对应条目
   RPC_CALL_RESULT_ERROR       = 4;   //其他错误
}

//一般rpc调用返回值
message CommonResponse{
	RPC_CALL_RESULT result = 1;
	string msg = 2;
}

enum VIEW_PRODUCT_TYPE{
	VIEW_PRODUCT_TYPE_WEIKE = 0;        //微课
	VIEW_PRODUCT_TYPE_COURSEVIDEO = 1;  //课堂实录
}

//观看设备的类型定义
enum DEVICE_TYPE{
	DEVICE_TYPE_PC = 0;               //使用电脑观看
	DEVICE_TYPE_ANDROID = 1;	      //使用android手机观看
	DEVICE_TYPE_IOS = 2;              //使用苹果手机观看
}

message SearchViewCountRequest{
	repeated int64 id = 1;                 //要查询的资源的ID
	VIEW_PRODUCT_TYPE product_type = 2;    //观看产品类型	
}

message ViewCountItem{
	int64 id = 1;         //所查询的资源的ID
	int32 count = 2;      //观看总数
}

message SearchViewCountResponse{
	RPC_CALL_RESULT result = 1;
	repeated ViewCountItem list = 2;
}

message InsertViewLogRequest{
	int64 id = 1;                              //所观看的资源的ID
	int64 userid = 2;                          //观看者ID
	VIEW_PRODUCT_TYPE product_type = 3;        //产品类型
	DEVICE_TYPE device = 4;                    //观看设备
}

message InsertViewLogResponse{
	RPC_CALL_RESULT result = 1;
}

message GetUserViewCountRequest{
	int64 id = 1;                              //所观看的资源的ID
	int64 userid = 2;                          //观看者ID
	VIEW_PRODUCT_TYPE product_type = 3;        //产品类型
}

message GetUserViewCountResponse{
	RPC_CALL_RESULT result = 1;
	int32 count = 2;                          //观看次数
	string time = 3;                          //最后一次观看时间
}
